third_party/move/move-compiler/transactional-tests/tests/control_flow/break_continue_for_loop.exp
processed 1 task

task 0 'run'. lines 1-12:
Error: error[E01002]: unexpected token
   ┌─ TEMPFILE:10:9
   │
10 │         assert!(move x == 5, 42);
   │         ^^^^^^
   │         │
   │         Unexpected 'assert'
   │         Expected ';'


