third_party/move/move-compiler/transactional-tests/tests/control_flow/break_continue_for_loop.move
//# run
script {
    fun main() {
        let x = 0;
        for (i in 0..10) {
            if (x >= 5) break;
            x = x + 1;
            continue
        }
        assert!(move x == 5, 42);
    }
}
